--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,37 +9,37 @@
   </div>
   <ul class="menu__niveis">
     <li class="menu__niveis__nivel-1">
-      <strong><a href="#authorization">{% t menu.authentication %}</a></strong>
+      <strong><a href="#authorization">{{ site.data.languages[page.language].menu.authentication }}</a></strong>
       <ul>
-        <li><a href="#token">{% t menu.getting_access_token %}</a></li>
+        <li><a href="#token">{{ site.data.languages[page.language].menu.getting_access_token }}</a></li>
       </ul>
     </li>
     <li class="menu__niveis__nivel-1">
-      <strong><a href="#ordens">{% t menu.orders %}</a></strong>
+      <strong><a href="#ordens">{{ site.data.languages[page.language].menu.orders }}</a></strong>
       <ul>
-        <li><a href="#criandoOrdem">{% t menu.orders_items.create %}</a></li>
-        <li><a href="#autorizandoOrdem">{% t menu.orders_items.authorize %}</a></li>
-        <li><a href="#capturandoOrdem">{% t menu.orders_items.capture %}</a></li>
-        <li><a href="#consultandoOrdem">{% t menu.orders_items.search %}</a></li>
-        <li><a href="#cancelandoOrdem">{% t menu.orders_items.cancel %}</a></li>
-        <li><a href="#estornandoOrdem">{% t menu.orders_items.refund %}</a></li>
+        <li><a href="#criandoOrdem">{{ site.data.languages[page.language].menu.orders_items.create }}</a></li>
+        <li><a href="#autorizandoOrdem">{{ site.data.languages[page.language].menu.orders_items.authorize }}</a></li>
+        <li><a href="#capturandoOrdem">{{ site.data.languages[page.language].menu.orders_items.capture }}</a></li>
+        <li><a href="#consultandoOrdem">{{ site.data.languages[page.language].menu.orders_items.search }}</a></li>
+        <li><a href="#cancelandoOrdem">{{ site.data.languages[page.language].menu.orders_items.cancel }}</a></li>
+        <li><a href="#estornandoOrdem">{{ site.data.languages[page.language].menu.orders_items.refund }}</a></li>
       </ul>
     </li>
     <li class="menu__niveis__nivel-1">
-      <strong><a href="#callback">{% t menu.callback %}</a></strong>
+      <strong><a href="#callback">{{ site.data.languages[page.language].menu.callback }}</a></strong>
       <ul>
         <li>
-          <a href="#criandoCallback">{% t menu.callback_items.creating_endpoint %}</a>
+          <a href="#criandoCallback">{{ site.data.languages[page.language].menu.callback_items.creating_endpoint }}</a>
         </li>
       </ul>
     </li>
   </ul>
   <div class="container">
     <div class="row idiomas">
-      {% for item in site.translations %}
-        <div class="col-6 {{ item[1].language.class }}">
-          <a href="/{{ item[1].language.link }}">
-            <img src="{{ item[1].language.image }}" class="img-fluid" alt="{{ item[1].language.description }}" />
+      {% for item in site.data.languages %}
+        <div class="col-6 {{ item[1].menu.icons.class }}">
+          <a href="{{ item[1].menu.icons.link }}">
+            <img src="{{ item[1].menu.icons.image }}" class="img-fluid" alt="{{ item[1].menu.icons.description }}" />
           </a>
         </div>
       {% endfor %}
