--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link rel="icon" href="/assets/favicon/favicon.png" />
-  <title>{% t page.title %}</title>
+  <title>{{ page.title }}</title>
 </head>
 
 <body>
